# fast-track_process

./: .coverage  .gitignore  AGENTS.md  BACKLOG.md  BACKLOG_FTENGINE.md  BACKLOG_FTENGINE_ftui_feedback.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  setup_env.sh
.claude/: settings.json
.github/workflows/: ci.yml
docs/: V3_ARCHITECTURE.md  fast-track-flow.md  fast-track-v3-flow.md  ft_engine_usage.md  mvp-builder-architecture.md  mvp-builder-flow.md
environment/: README.md  gateway.example.md  symlabs.env.example  tecnospeed.env.example
ft/cli/: feature_parallel.py  main.py  template_main.py
ft/engine/: acceptance.py  agent_policy.py  canonical_merge.py  context_profiles.py  cycle_manager.py  delegate.py  evolve.py  feature_batch.py  gatekeeper.py  git_ops.py  graph.py  hooks.py  layout.py  ui.py  (+19 more)
kb/: avaliacao_e2e_service_mate_4.md  avaliacao_e2e_service_mate_4_v2.md  avaliacao_e2e_service_mate_5.md  avaliacao_e2e_service_mate_6.md  avaliacao_e2e_service_mate_7.md  diretrizes_modelo_fable_5.md  plano_de_voo_service_mate_5.md  plano_de_voo_service_mate_6.md  plano_de_voo_service_mate_7.md
process/: README.md  test_process.yml  test_process_v2.yml  test_process_v3_tdd.yml  test_process_v4_parallel.yml
src/: __init__.py  calculator.py  main.py
tests/: conftest.py  test_calculator.py  test_forgebase_audit.py  test_human_gate_auto.py  test_log_heartbeat.py  test_paint_stream.py  test_rf01_process_id.py  test_rf02_rf03_rf04_rf05_motor.py  test_rf06_rf10_gates.py  test_rf11_rf15_agents.py  test_rf16_rf18_traceability.py  test_template_cleanliness.py
(+201 files in other folders)
